# watchEmu

./: .gitignore  README.md  index.html
.github/workflows/: android-build.yml  android.yml
android/: .gitignore  AMAZFIT_STRATOS.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/emu/: index.html  jsnes.min.js
android/app/src/main/cpp/: CMakeLists.txt  apu.h  controller.h  cpu.h  cpu_impl.h  jni_bridge.cpp  mapper.h  nes.h  palette.h  ppu.h  ppu_impl.h  rom.h  serialize.h
android/app/src/main/java/com/watchemu/app/: GameView.kt  MainActivity.kt
android/app/src/main/java/com/watchemu/app/nes/: Apu.kt  Controller.kt  Cpu.kt  Mapper.kt  NativeBridge.kt  Nes.kt  Palette.kt  Ppu.kt  Rom.kt
android/app/src/main/java/com/watchemu/app/ui/: GameView.kt  RomPickerScreen.kt  SaveChoiceDialog.kt  WatchScreen.kt
android/app/src/main/java/com/watchemu/app/ui/theme/: WatchEmuTheme.kt
android/app/src/main/res/values/: strings.xml
nes/: index.html  nes-app.js
shared/: home.css  watch-ui.css
snes/: index.html  snes-app.js  snes.css
